# programming_language

./: CMakeLists.txt  Interpretator.h  Lexer.cpp  Lexer.h  Poliz.h  TID.cpp  TID.h  code.txt  head.h  keyword.h  keyword.txt  keywords.h  main.cpp  parser.cpp  parser.h  sem_analyzer.cpp  sem_analyzer.h  solve.cpp  syntax_analyZOV.cpp  syntaxer_funcs.h  Грамматика.docx
